@@ -1,5 +1,13 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==01/05/2011==
+Trevius: Changed xpreward field in the tasks table to be signed so it can display negative values for the level based experience rewards.
+Trevius: Tasks now show item links in Task Rewards correctly for all clients.
+Trevius: Tasks now reward any set Experience and/or Coin even if the rewardmethod is set to 2 (perl quest).
+
+Required SQL:
+utils/sql/svn/1803_required_tasks_xpreward_signed.sql
+
 ==01/04/2011==
 Trevius: (l0stmancd) BagType 53 can now be used as an Augmentation Sealer from inventory.
 Caryatis: Implemented SE_Doppelganger(Doppelganger AA is now functional)
